footer component and password ,confirm password validation

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -17,9 +17,9 @@
             <div class="col-xs-12 col-md-6">
               <div>
                 <p class="text-secondary mb-1">Nov 11, 2022</p>
-                <h2 class="h1 mb-3"><a class="link-dark text-decoration-none"  >Cashewkerne: Die gesunden "Mineralstoffbomben"</a></h2>
+                <h2 class="h1 mb-3"><a class="link-dark text-decoration-none">Cashewkerne: Die gesunden "Mineralstoffbomben"</a></h2>
                 <p class="mb-4">Sind Cashews gesund? Wissenschaftliche Facts, warum Cashewnüsse gesund sind: das stresslindernde Tryptophan, konzentrationsfördernde B-Vitamine, hochwertige, pflanzliche Proteine und gesunde Fette..</p>
-                <a class="btn btn-primary"   href="https://cashew-shop.de/blogs/blog/cashewkerne-die-gesunden-mineralstoffbomben">Read More</a>
+                <a class="btn btn-primary"  >Read More</a>
               </div>
             </div>
           </div>
@@ -41,7 +41,7 @@
                 <p class="text-secondary mb-1">Oct 9, 2022</p>
                 <h2 class="h1 mb-3"><a class="link-dark text-decoration-none"  >Cashewkerne zum Abnehmen: Die 3 Geheimnisse über das Superfood (studienbasiert)</a></h2>
                 <p class="mb-4"> Abnehmen mit Hilfe von Fetten? Ja, auf jeden Fall! Gesunde Fette helfen dir und sind notwendig für die Gewichtsabnahme. Erfahre, wie Cashewkerne dich beim <b>Abnehmen</b> unterstützen!</p>
-                <a class="btn btn-primary"   href="https://cashew-shop.de/blogs/blog/cashewkerne-die-gesunden-mineralstoffbomben">Read More</a>
+                <a class="btn btn-primary"  >Read More</a>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
                 <p class="text-secondary mb-1">Sep 17, 2022</p>
                 <h2 class="h1 mb-3"><a class="link-dark text-decoration-none"  >Cashews ‒ Rohkost und Verarbeitung</a></h2>
                 <p class="mb-4">Rohkost Cashews sind eine Mär und können gesundheitsgefährdend sein. So werden Cashews verarbeitet: Die Herstellung von Cashewkernen ist gefährlich und aufwändig.</p>
-                <a class="btn btn-primary"   href="_self">Read More</a>
+                <a class="btn btn-primary"   >Read More</a>
               </div>
             </div>
           </div>
@@ -92,3 +92,5 @@
       </div>
     </div>
   </section>
+
+  <app-footer></app-footer>
