--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,3 +1,7 @@
+// emty card 
+
+
+// addding cart details
 .icon-hover-primary:hover {
     border-color: #3b71ca !important;
     background-color: white !important;
