--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,46 +58,7 @@
 
  
 
-<!---------Footer---------->
-<div class="fotter">
-    <div class="container">
-        <div class="row">
-            <div class="fotter-col-1">
-                <h3>Downlods Our Apps</h3>
-                <p>Downlods App For Android And Ios Mobile Phone.</p>
-                <div class="app-logo">
-                    <img src="./images/play-store.png" alt="">
-                    <img src="./images/app-store.png" alt="">
-                </div>
-            </div>
-            <div class="fotter-col-2">
-                <img src="./images/logo-white.png" alt="">
-                <p>Our Purpose Is To Sustainable Make The Pleasure And. Benefuts Of
-                     Sports accessible To The Many..</p>
-            </div>
-            <div class="fotter-col-3">
-                <h3>Useful Linkd</h3>
-                <ul>
-                    <li>Coupons</li>
-                    <li>Blog Post</li>
-                    <li>Return Policy</li>
-                    <li>Join Affiliate</li>
-                </ul>
-            </div>
-            <div class="fotter-col-4">
-                <h3>Useful Linkd</h3>
-                <ul>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
-                    <li>Instagram</li>
-                    <li>Youtube</li>
-                </ul>
-            </div>
-        </div>
-        <hr>
-        <p class="copyrighr">Cropyright 2020 Basudev Nayak</p>
-    </div>
-</div>
+ <app-footer></app-footer>
 <!----------Js for togle Menu-->
 
 </body>
