--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
 
 
 <!-- Login 9 - Bootstrap Brain Component -->
-<section *ngIf="loginFormHide" class="bg-primary py-3 py-md-5 py-xl-8">
+<section *ngIf="loginFormHide" class="bg  py-3 py-md-5 py-xl-8">
   <div class="container ">
     <div class="row gy-4 align-items-center">
       <!-- <div class="col-12 col-md-6 col-xl-7">
