--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -214,7 +214,7 @@ a{
     display: inline-block;
     width: 13px;
     height: 13px;
-    background: $primaryColor url('https://res.cloudinary.com/ajayrawat/image/upload/v1508734484/hamburger_icon_o7uviz.svg') no-repeat;
+    background: url('https://res.cloudinary.com/ajayrawat/image/upload/v1508734484/hamburger_icon_o7uviz.svg') no-repeat;
     background-size: contain;
     vertical-align: middle;
   }
