--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,22 @@
 <app-navbar></app-navbar> 
-<div class="form_wrapper">
+
+<!-- login successs popup  -->
+
+ 
+<div *ngIf="SignUpSucessPopUp" class="thanku-pop">
+  <div class="sucess">
+   
+    <i class="bi bi-check-lg check"></i>
+    <h3>Sucess!</h3>
+    <p>Thank you for validating the access 
+    and sharing your details. </p>
+    <a routerLink="/shopping" type="button" class="pop-btn">Continue Shopping</a>
+  </div>
+</div>
+
+
+
+<div *ngIf="signUpFormHide" class="form_wrapper">
     <div class="form_container">
       <div class="title_container">
         <h2> SignUp Form</h2>
@@ -12,27 +29,27 @@
                   <div class="input_field"> <span><i aria-hidden="true" class="bi bi-person"></i></span>
                     <input type="text" name="name" placeholder="First Name" formControlName="firstName"/>
                   </div>
-                  <span class="error" *ngIf="signUpForm.get('firstName')?.invalid || signUpForm.get('firstName')?.touched">Please Enter Your Name</span>
+                  <span class="error" *ngIf="signUpForm.get('lastName')?.invalid && signUpForm.get('lastName')?.touched">This is required *</span>
                 </div>
 
                 <div class="col_half">
                   <div class="input_field"> <span><i aria-hidden="true" class="fa bi-person"></i></span>
                     <input type="text" name="name" placeholder="Last Name" required  formControlName="lastName"/>
                   </div>
-                  <span class="error" *ngIf="signUpForm.get('lastName')?.invalid && signUpForm.get('lastName')?.touched">Please Enter Your Name</span>
+                  <!-- <span class="error" *ngIf="signUpForm.get('lastName')?.invalid && signUpForm.get('lastName')?.touched">Please Enter Your Name</span> -->
                 </div>
               </div>
 
             <div class="input_field"> <span><i aria-hidden="true" class="fa bi-phone"></i></span>
               <input type="text" name="phone" placeholder="Phone No" required formControlName="phoneNo" maxlength="10"/>
             </div>
-            <span class="error" *ngIf="signUpForm.get('phoneNo')?.hasError('maxlength') && signUpForm.get('phoneNo')?.touched">Enter Valid Number</span>
+            <span class="error" *ngIf="signUpForm.get('phoneNo')?.hasError('maxlength') && signUpForm.get('phoneNo')?.touched">Enter Valid Number*</span>
 
 
             <div class="input_field"> <span><i aria-hidden="true" class="fa bi-envelope"></i></span>
               <input type="email" name="email" placeholder="Email" required  formControlName="email" />
             </div>
-            <span class="error" *ngIf="signUpForm.get('email')?.invalid && signUpForm.get('email')?.touched">Enter Valid Email Id</span>
+            <span class="error" *ngIf="signUpForm.get('email')?.invalid && signUpForm.get('email')?.touched || signUpForm.get('email')?.hasError('email')">Enter Valid Email Id*</span>
             
             <div class="input_field">
                 <label for="Date"><b>Date Of Birth</b></label>
@@ -59,31 +76,32 @@
 
                 <label for="City" ><b>City</b></label>
                 <input type="text" class="form-control input_field" name="city" id="city" placeholder="City Name" required formControlName="city">
-                <span class="error" *ngIf="signUpForm.get('city')?.invalid && signUpForm.get('city')?.touched">Enter Your City</span>
+                <span class="error" *ngIf="signUpForm.get('city')?.invalid && signUpForm.get('city')?.touched">Enter Your City*</span>
 <br>
                 <label for="zip" ><b>Pin-Code</b></label>
                 <input type="zip" class="form-control input_field" name="Zip" id="zip" placeholder="Postal-Code." required formControlName="pinCode">
-                <span class="error"*ngIf="signUpForm.get('pinCode')?.invalid && signUpForm.get('pinCode')?.touched">Enter Pin Code</span>
+                <span class="error"*ngIf="signUpForm.get('pinCode')?.invalid && signUpForm.get('pinCode')?.touched">Enter Pin Code*</span>
 
 
                 <div class="input_field"> <span><i aria-hidden="true" class="bi bi-lock"></i></span>
-                  <input type="password" name="password" placeholder="Password" required formControlName="password" />
+                  <input type="password" name="password" #password placeholder="Password" (input)="pass(password.value)" required formControlName="password" />
                 </div>
-                <span class="error" *ngIf="signUpForm.get('password')?.invalid && signUpForm.get('password')?.touched">Set Your Password</span>
+                <span class="error" *ngIf="signUpForm.get('password')?.invalid && signUpForm.get('password')?.touched" >Set Your Password*</span>
 
                 
                 <div class="input_field"> <span><i aria-hidden="true" class="bi bi-lock"></i></span>
                 </div>
-                <input type="password" name="password" placeholder="Re-type Password" required formControlName="confirmPassword" />
-                <span class="error" *ngIf="signUpForm.get('confirmPassword')?.invalid && signUpForm.get('confirmPassword')?.touched">Incorrect Your Password</span>
+                <input type="password" name="password" #confirmPassword placeholder="Re-type Password" (input)="confirmPass(confirmPassword.value)" required formControlName="confirmPassword" />
+                <span class="error" *ngIf="(signUpForm.get('confirmPassword')?.invalid && signUpForm.get('confirmPassword')?.touched )|| passwordError">Incorrect Your Password*</span>
                 
                 
                 <div class="input_field checkbox_option">
-                  <input type="checkbox" id="cb1" >
+                  <input type="checkbox" id="cb1" value="true" formControlName="condition">
                   <label for="cb1">I agree with terms and conditions</label>
               </div>
               
-            <input class="button" (click)="submit()" type="submit" value="Register" />
+           
+            <button [disabled]="signUpForm.invalid" class="button" (click)="submit()">Register</button>
           </form>
         </div>
       </div>
