--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,34 @@
 <app-navbar></app-navbar>
+    
+<!-- emty card show -->
+<div class="container-fluid  mt-100">
+  <div class="row">
   
+   <div class="col-md-12">
+   
+       <div class="card">
+     <div class="card-header">
+     <h5>Store</h5>
+     </div>
+     <div class="card-body cart">
+         <div class="col-sm-12 empty-cart-cls text-center">
+           <img src="https://i.imgur.com/dCdflKN.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+           <h3><strong>Your Cart is Empty</strong></h3>
+           <h4>Add something to make me happy :</h4>
+           <a routerLink="/shopping"  class="btn btn-primary cart-btn-transform m-3" data-abc="true">continue shopping</a>
+           
+         
+         </div>
+     </div>
+ </div>
+     
+   
+   </div>
+  
+  </div>
+ 
+ </div>
+
   <!-- cart + summary -->
   <section class="bg-light my-5">
     <div class="container">
@@ -15,7 +44,7 @@
                     <div class="d-flex">
                       <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/11.webp" class="border rounded me-3" style="width: 96px; height: 96px;" />
                       <div class="">
-                        <a href="#" class="nav-link">Winter jacket for men and lady</a>
+                        <a   class="nav-link">Winter jacket for men and lady</a>
                         <p class="text-muted">Yellow, Jeans</p>
                       </div>
                     </div>
@@ -38,7 +67,7 @@
                 <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
                   <div class="float-md-end">
                     <a href="#!" class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
-                    <a href="#" class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
+                    <a   class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
                   </div>
                 </div>
               </div>
@@ -49,7 +78,7 @@
                     <div class="d-flex">
                       <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/12.webp" class="border rounded me-3" style="width: 96px; height: 96px;" />
                       <div class="">
-                        <a href="#" class="nav-link">Mens T-shirt Cotton Base</a>
+                        <a   class="nav-link">Mens T-shirt Cotton Base</a>
                         <p class="text-muted">Blue, Medium</p>
                       </div>
                     </div>
@@ -73,7 +102,7 @@
                 <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
                   <div class="float-md-end">
                     <a href="#!" class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
-                    <a href="#" class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
+                    <a   class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
                   </div>
                 </div>
               </div>
@@ -84,7 +113,7 @@
                     <div class="d-flex">
                       <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/13.webp" class="border rounded me-3" style="width: 96px; height: 96px;" />
                       <div class="">
-                        <a href="#" class="nav-link">Blazer Suit Dress Jacket for Men</a>
+                        <a   class="nav-link">Blazer Suit Dress Jacket for Men</a>
                         <p class="text-muted">XL size, Jeans, Blue</p>
                       </div>
                     </div>
@@ -107,7 +136,7 @@
                 <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
                   <div class="float-md-end">
                     <a href="#!" class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
-                    <a href="#" class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
+                    <a   class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
                   </div>
                 </div>
               </div>
@@ -132,7 +161,7 @@
                   <label class="form-label">Have coupon?</label>
                   <div class="input-group">
                     <input type="text" class="form-control border" name="" placeholder="Coupon code" />
-                    <button style="z-index: 1;" class="btn btn-light border">Apply</button>
+                    <button style="z-index: 0;" class="btn btn-light border">Apply</button>
                   </div>
                 </div>
               </form>
@@ -142,25 +171,25 @@
             <div class="card-body">
               <div class="d-flex justify-content-between">
                 <p class="mb-2">Total price:</p>
-                <p class="mb-2">$329.00</p>
+                <p class="mb-2">329.00</p>
               </div>
               <div class="d-flex justify-content-between">
                 <p class="mb-2">Discount:</p>
-                <p class="mb-2 text-success">-$60.00</p>
+                <p class="mb-2 text-success">-60.00</p>
               </div>
               <div class="d-flex justify-content-between">
                 <p class="mb-2">TAX:</p>
-                <p class="mb-2">$14.00</p>
+                <p class="mb-2">14.00</p>
               </div>
               <hr />
               <div class="d-flex justify-content-between">
                 <p class="mb-2">Total price:</p>
-                <p class="mb-2 fw-bold">$283.00</p>
+                <p class="mb-2 fw-bold">283.00</p>
               </div>
   
               <div class="mt-3">
-                <a href="#" class="btn btn-success w-100 shadow-0 mb-2"> Make Purchase </a>
-                <a href="#" class="btn btn-light w-100 border mt-2"> Back to shop </a>
+                <a   class="btn btn-success w-100 shadow-0 mb-2"> Make Purchase </a>
+                <a   class="btn btn-light w-100 border mt-2"> Back to shop </a>
               </div>
             </div>
           </div>
