--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,7 @@
 //  login success popup 
-
+.bg{
+  background:linear-gradient(to right, #009fba, #2ac4dff1);
+}
 .thanku-pop .sucess {
     width: 500px;
     background: #caf6ff;
