--- a/src/app/product-display/product-display.component.html
+++ b/src/app/product-display/product-display.component.html
@@ -15,14 +15,15 @@
                 <a  ><i class="fas fa-heart text-primary fa-lg float-end pt-3 m-2"></i></a>
               </div>
             </div>
-            <a   class="">
-              <img (click)="producDetailsShow(products)" src="{{products.productImage.img1}}" class="card-img-top rounded-2" />
+            <a style="height:200px;"  class="">
+              <img (click)="producDetailsShow(products)" src="{{products.productImage.img1}}" class="card-img-top rounded-2"  />
             </a>
             <div class="card-body d-flex flex-column pt-3 border-top">
               <a   class="nav-link">{{products.productName}}</a>
               <div class="price-wrap mb-2">
-                <strong class="">{{products.productCost|currency:'INR'}}</strong><span>/500gm</span>
-                <p> <del class="">{{products.productCost+50|currency:'INR'}}</del></p>
+                <strong class="">{{products.productCost-((products.productCost*products.discount)/100) | currency:'INR'}}</strong><span>/500gm</span>
+                <p> <del class="">{{products.productCost|currency:'INR'}}</del></p>
+               
               </div>
               <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
                 <a   class="btn btn-outline-primary w-100">Add to cart</a>
@@ -35,139 +36,5 @@
   </section>
   <!-- Recommended -->
   
-  <!-- Footer -->
-  <footer class="text-center text-lg-start text-muted bg-primary mt-3">
-    <!-- Section: Links  -->
-    <section class="">
-      <div class="container text-center text-md-start pt-4 pb-4">
-        <!-- Grid row -->
-        <div class="row mt-3">
-          <!-- Grid column -->
-          <div class="col-12 col-lg-3 col-sm-12 mb-2">
-            <!-- Content -->
-            <a href="https://mdbootstrap.com/" target="_blank" class="text-white h2">
-              MDB
-            </a>
-            <p class="mt-1 text-white">
-              © 2023 Copyright: MDBootstrap.com
-            </p>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-6 col-sm-4 col-lg-2">
-            <!-- Links -->
-            <h6 class="text-uppercase text-white fw-bold mb-2">
-              Store
-            </h6>
-            <ul class="list-unstyled mb-4">
-              <li><a class="text-white-50"  >About us</a></li>
-              <li><a class="text-white-50"  >Find store</a></li>
-              <li><a class="text-white-50"  >Categories</a></li>
-              <li><a class="text-white-50"  >Blogs</a></li>
-            </ul>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-6 col-sm-4 col-lg-2">
-            <!-- Links -->
-            <h6 class="text-uppercase text-white fw-bold mb-2">
-              Information
-            </h6>
-            <ul class="list-unstyled mb-4">
-              <li><a class="text-white-50"  >Help center</a></li>
-              <li><a class="text-white-50"  >Money refund</a></li>
-              <li><a class="text-white-50"  >Shipping info</a></li>
-              <li><a class="text-white-50"  >Refunds</a></li>
-            </ul>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-6 col-sm-4 col-lg-2">
-            <!-- Links -->
-            <h6 class="text-uppercase text-white fw-bold mb-2">
-              Support
-            </h6>
-            <ul class="list-unstyled mb-4">
-              <li><a class="text-white-50"  >Help center</a></li>
-              <li><a class="text-white-50"  >Documents</a></li>
-              <li><a class="text-white-50"  >Account restore</a></li>
-              <li><a class="text-white-50"  >My orders</a></li>
-            </ul>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <!-- Links -->
-            <h6 class="text-uppercase text-white fw-bold mb-2">Newsletter</h6>
-            <p class="text-white">Stay in touch with latest updates about our products and offers</p>
-            <div class="input-group mb-3">
-              <input type="email" class="form-control border" placeholder="Email" aria-label="Email" aria-describedby="button-addon2" />
-              <button class="btn btn-light border shadow-0" type="button" id="button-addon2" data-mdb-ripple-color="dark">
-                Join
-              </button>
-            </div>
-          </div>
-          <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
-      </div>
-    </section>
-    <!-- Section: Links  -->
-  
-    <div class="">
-      <div class="container">
-        <div class="d-flex justify-content-between py-4 border-top">
-          <!--- payment --->
-          <div>
-            <i class="fab fa-lg fa-cc-visa text-white"></i>
-            <i class="fab fa-lg fa-cc-amex text-white"></i>
-            <i class="fab fa-lg fa-cc-mastercard text-white"></i>
-            <i class="fab fa-lg fa-cc-paypal text-white"></i>
-          </div>
-          <!--- payment --->
-  
-          <!--- language selector --->
-          <div class="dropdown dropup">
-            <a class="dropdown-toggle text-white"   id="Dropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false"> <i class="flag-united-kingdom flag m-0 me-1"></i>English </a>
-  
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="Dropdown">
-              <li>
-                <a class="dropdown-item"  ><i class="flag-united-kingdom flag"></i>English <i class="fa fa-check text-success ms-2"></i></a>
-              </li>
-              <li><hr class="dropdown-divider" /></li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-poland flag"></i>Polski</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-china flag"></i>中文</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-japan flag"></i>日本語</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-germany flag"></i>Deutsch</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-france flag"></i>Français</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-spain flag"></i>Español</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-russia flag"></i>Русский</a>
-              </li>
-              <li>
-                <a class="dropdown-item"  ><i class="flag-portugal flag"></i>Português</a>
-              </li>
-            </ul>
-          </div>
-          <!--- language selector --->
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer -->
+
+  <app-footer></app-footer>
