--- a/src/app/shopping/shopping.component.scss
+++ b/src/app/shopping/shopping.component.scss
@@ -199,58 +199,7 @@ small{
 .col-5 img:hover{
     filter: grayscale(0%);
 }
-/*--------------footer----------*/
-.fotter{
-    background: #000;
-    color: #8a8a8a;
-    font-size: 14px;
-    padding: 60px 0 20px;
-}
-.fotter p{
-    color: #8a8a8a;
-}
-.fotter h3{
-    color: #fff;
-    margin-bottom: 20px;
-}
-.fotter-col-1,.fotter-col-2,.fotter-col-3,.fotter-col-4{
-    min-width : 250px;
-    margin-bottom:20px
-}
-.fotter-col-1{
-    flex-basis:30%;
-}
-
-.fotter-col-2{
-    flex: 1;
-    text-align: center;
-}
-.fotter-col-2 img{
- width: 180px;
- margin-bottom: 30px;
-}
-.fotter-col-3,.fotter-col-4{
-    flex-basis: 12%;
-    text-align: center;
-}
-ul{
-    list-style-type: none;
-    cursor: pointer;
-}
-.app-logo{
-    margin-top: 20px;
-}
-.app-logo img{
-    width: 140px;
-}
-.copyrighr{
- text-align: center;
-}
-.fotter hr{
-    
-    background: #b5b5b5;
-    margin: 20px 0;
-}
+ 
 /*----------menu-icon------*/
 .menu-icon{
     width: 28px ;
@@ -662,7 +611,8 @@ html {
   }
   
   .cont > .dropdown {
-    margin: 0 20px;
+    margin:0px -12px;
+    
     vertical-align: top;
   }
   
@@ -687,7 +637,7 @@ html {
   .dropdown:before, .dropdown:after {
     content: '';
     position: absolute;
-    z-index: 2;
+    z-index: 0;
     top: 9px;
     right: 10px;
     width: 0;
@@ -726,7 +676,7 @@ html {
   }
   
   .dropdown-select:focus {
-    z-index: 3;
+    z-index: 0;
     width: 100%;
     color: #394349;
     outline: 2px solid #49aff2;
