--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -62,7 +62,7 @@
 
  
     </div>
-        <h2 class="title">Latest product</h2>
+        <h2 class="title">New product</h2>
         <div class="row">
             <div class="col-4">
                 <img src="./images/product-5.jpg" alt="">
@@ -179,7 +179,7 @@
             <p>$60.00</p>
         </div>
     </div>
-        <h2 class="title">Latest product</h2>
+        <h2 class="title">Feature product</h2>
         <div class="row">
             <div class="col-4">
                 <img src="./images/product-5.jpg" alt="">
@@ -307,7 +307,7 @@
                     The Mi smart Band 4 Festures a 39.9% larger (the Mi Band 3)
                     Amoled color full-touch
                 </small>
-                <a href="" class="btn">Buy Now &#8594;</a>
+                <a  class="btn">Buy Now &#8594;</a>
             </div>
         </div>
     </div>
