--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -82,8 +82,8 @@
             <div class="row">
               <div class="col-12">
                 <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-end mt-4">
-                  <a  >Forgot password</a>
                   
+                  <p><a  >Forgot password</a></p>
                 </div>
               </div>
             </div>
