--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
   
-<div class=" main-div" (dblclick)="dropDowncancle()" >
+<div class=" main-div" >
     
     <div class="container navbar__container">
         <nav class="navbar__flex">
@@ -35,31 +35,38 @@
               <li><a routerLink="/home"  >Home</a></li>
               <li><a routerLink="/contact" >About</a></li>
               <li><a routerLink="/blog" >Blog</a></li>
-              <li><a   (click)="productDrop()" class="btn btn-default btn-sm dropdown-toggle navbar__products">Products</a>
-                
-                <ul *ngIf="productDropdown" class="navbar__sublinks" >
-                  <li><a  >linkedin</a></li>
-                  <li><a  >dribbble</a></li>
-                  <li><a  >behance</a></li>
-                  <li><a  >codepen</a></li>
-                  <li><a  >vimeo</a></li>
+
+              <li class="btn-group">
+                <a type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
+                <ul class="dropdown-menu  dropdown-menu-dark ">
+                  <li><a class="dropdown-item" > linkedin</a></li>
+                  <li><a class="dropdown-item"  >dribbble</a></li>
+                  <li><a class="dropdown-item"  >dribbble</a></li>
+                  <li><a></a></li>  
                 </ul>
-                 
               </li>
-               
+              
               <li *ngIf="cartHide" routerLink="/cart"><a  ><span class="cart">
                 <svg height="512pt" viewBox="0 -31 512.00026 512" width="512pt" xmlns="http://www.w3.org/2000/svg"><path d="m164.960938 300.003906h.023437c.019531 0 .039063-.003906.058594-.003906h271.957031c6.695312 0 12.582031-4.441406 14.421875-10.878906l60-210c1.292969-4.527344.386719-9.394532-2.445313-13.152344-2.835937-3.757812-7.269531-5.96875-11.976562-5.96875h-366.632812l-10.722657-48.253906c-1.527343-6.863282-7.613281-11.746094-14.644531-11.746094h-90c-8.285156 0-15 6.714844-15 15s6.714844 15 15 15h77.96875c1.898438 8.550781 51.3125 230.917969 54.15625 243.710938-15.941406 6.929687-27.125 22.824218-27.125 41.289062 0 24.8125 20.1875 45 45 45h272c8.285156 0 15-6.714844 15-15s-6.714844-15-15-15h-272c-8.269531 0-15-6.730469-15-15 0-8.257812 6.707031-14.976562 14.960938-14.996094zm312.152343-210.003906-51.429687 180h-248.652344l-40-180zm0 0"/><path d="m150 405c0 24.8125 20.1875 45 45 45s45-20.1875 45-45-20.1875-45-45-45-45 20.1875-45 45zm45-15c8.269531 0 15 6.730469 15 15s-6.730469 15-15 15-15-6.730469-15-15 6.730469-15 15-15zm0 0"/><path d="m362 405c0 24.8125 20.1875 45 45 45s45-20.1875 45-45-20.1875-45-45-45-45 20.1875-45 45zm45-15c8.269531 0 15 6.730469 15 15s-6.730469 15-15 15-15-6.730469-15-15 6.730469-15 15-15zm0 0"/></svg>
                 <span class="cart__count">0</span>
-              </span></a></li>
-              <li><a> 
-              <li><a (click)="userDropdown()" class="btn btn-default btn-sm "><span><i class="bi bi-person navbar__user"></i></span></a></li></a>
-                <ul *ngIf="userDrop" class="navbar__sublinks">
-                  <li><a >Log Out</a></li>
-                  <li><a >Orders</a></li>
-                  <li><a >Account</a></li>
-                  <li><a routerLink="/login" >LogIn</a></li>
-                </ul>
-            </ul>
+              </span>
+            </a></li>
+           
+            <li class="btn-group user">
+              <a type="button" class="dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person navbar__user"></i></a>
+              <ul class="dropdown-menu  dropdown-menu-dark ">
+                <li><a class="dropdown-item"  > <i class="bi bi-person-fill-gear"></i>&nbsp;Account</a></li>
+                <li><a class="dropdown-item"  > <i class="bi bi-cart4"></i>&nbsp;Orders</a></li>
+                <li><a routerLink="/login" class="dropdown-item" > <i class="bi bi-box-arrow-left"></i>&nbsp;Login</a></li>
+                <li><a class="dropdown-item"  > <i class="bi bi-box-arrow-right"></i>&nbsp;Log Out</a></li>
+                
+          
+                <li><a></a></li>  
+              </ul>
+            </li>
+                
+              </ul>
+
           </div>
         </nav>
       </div>
