--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,7 +37,7 @@
         </div>
       </div> -->
       <div class="col-12 col-md-6 col-xl-5">
-        <div class="card border-0 rounded-4">
+        <div class="card border-0 rounded-4 mt-4">
           <div class="card-body p-3 p-md-4 p-xl-5">
             <div class="row">
               <div class="col-12">
