--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,7 +1,7 @@
-<app-navbar></app-navbar>
+<app-navbar [cartCount]="addCartCount"></app-navbar>
     
 <!-- emty card show -->
-<div class="container-fluid  mt-100">
+<div *ngIf="emtyCartError" class="container-fluid  mt-100">
   <div class="row">
   
    <div class="col-md-12">
@@ -30,7 +30,7 @@
  </div>
 
   <!-- cart + summary -->
-  <section class="bg-light my-5">
+  <section *ngIf="calculationTable" class="bg-light my-5">
     <div class="container">
       <div class="row">
         <!-- cart -->
@@ -38,14 +38,16 @@
           <div class="card border shadow-0">
             <div class="m-4">
               <h4 class="card-title mb-4">Your shopping cart</h4>
-              <div class="row gy-3 mb-4">
+
+
+              <div *ngFor="let cartData of cartDataFromLoaclStorage" class="row gy-3 mb-4">
                 <div class="col-lg-5">
                   <div class="me-lg-5">
                     <div class="d-flex">
-                      <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/11.webp" class="border rounded me-3" style="width: 96px; height: 96px;" />
+                      <img src="{{cartData.productImage.img1}}" class="border rounded me-3" style="width: 96px; height: 96px;" />
                       <div class="">
-                        <a   class="nav-link">Winter jacket for men and lady</a>
-                        <p class="text-muted">Yellow, Jeans</p>
+                        <a   class="nav-link">{{cartData.productName}}</a>
+                        <p class="text-muted">{{cartData.productFlavour}}</p>
                       </div>
                     </div>
                   </div>
@@ -61,85 +63,19 @@
                   </div>
                   <div class="">
                  
-                    <small class="text-muted text-nowrap"> $460.00 / per item </small>
+                    <small class="text-muted text-nowrap"><b>{{cartData.productCost|currency:'INR'}}</b> / per 500gm </small>
                   </div>
                 </div>
                 <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
                   <div class="float-md-end">
                     <a  class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
-                    <a   class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
+                    <a   class="btn btn-light border text-danger icon-hover-danger" (click)="removeCartItem(cartData.id)"> Remove</a>
                   </div>
                 </div>
               </div>
   <hr>
-              <div class="row gy-3 mb-4">
-                <div class="col-lg-5">
-                  <div class="me-lg-5">
-                    <div class="d-flex">
-                      <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/12.webp" class="border rounded me-3" style="width: 96px; height: 96px;" />
-                      <div class="">
-                        <a   class="nav-link">Mens T-shirt Cotton Base</a>
-                        <p class="text-muted">Blue, Medium</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            
-                <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
-                  <div class="">
-                    <select style="width: 100px;" class="form-select me-4">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                    </select>
-                  </div>
-                  <div class="">
-                 
-                    <small class="text-muted text-nowrap"> $12.20 / per item </small>
-                  </div>
-                </div>
-                <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
-                  <div class="float-md-end">
-                    <a href="#!" class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
-                    <a   class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
-                  </div>
-                </div>
-              </div>
-  <hr>      
-              <div class="row gy-3">
-                <div class="col-lg-5">
-                  <div class="me-lg-5">
-                    <div class="d-flex">
-                      <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/13.webp" class="border rounded me-3" style="width: 96px; height: 96px;" />
-                      <div class="">
-                        <a   class="nav-link">Blazer Suit Dress Jacket for Men</a>
-                        <p class="text-muted">XL size, Jeans, Blue</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
-                  <div class="">
-                    <select style="width: 100px;" class="form-select me-4">
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                    </select>
-                  </div>
-                  <div class="">
-                   
-                    <small class="text-muted text-nowrap"> $460.00 / per item </small>
-                  </div>
-                </div>
-                <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
-                  <div class="float-md-end">
-                    <a   class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
-                    <a   class="btn btn-light border text-danger icon-hover-danger"> Remove</a>
-                  </div>
-                </div>
-              </div>
+              
+  <hr>       
             </div>
   
             <div class="border-top pt-4 mx-4 mb-4">
@@ -171,25 +107,25 @@
             <div class="card-body">
               <div class="d-flex justify-content-between">
                 <p class="mb-2">Total price:</p>
-                <p class="mb-2">329.00</p>
+                <p class="mb-2">{{totalCount|currency:'INR'}}</p>
               </div>
               <div class="d-flex justify-content-between">
                 <p class="mb-2">Discount:</p>
-                <p class="mb-2 text-success">-60.00</p>
+                <p class="mb-2 text-success">0</p>
               </div>
               <div class="d-flex justify-content-between">
                 <p class="mb-2">TAX:</p>
-                <p class="mb-2">14.00</p>
+                <p class="mb-2">0</p>
               </div>
               <hr />
               <div class="d-flex justify-content-between">
                 <p class="mb-2">Total price:</p>
-                <p class="mb-2 fw-bold">283.00</p>
+                <p class="mb-2 fw-bold">{{totalCount}}</p>
               </div>
   
               <div class="mt-3">
                 <a   class="btn btn-success w-100 shadow-0 mb-2"> Make Purchase </a>
-                <a   class="btn btn-light w-100 border mt-2"> Back to shop </a>
+                <a   class="btn btn-light w-100 border mt-2" routerLink="/shopping"> Back to shop </a>
               </div>
             </div>
           </div>
@@ -198,5 +134,5 @@
       </div>
     </div>
   </section>
- <app-product-display></app-product-display>
+ 
  
