--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -49,7 +49,7 @@
 						<div class="action mb-4">
 							<button class="add-to-cart btn btn-default my-4 mx-4" type="button">add to cart</button>
 							 
-							<button style="width: 150px;" class="add-to-cart btn btn-default mx-4  " type="button"> Buy <i class="bi bi-bag-dash-fill"></i></button>
+							<button style="width: 150px;" class="add-to-cart btn btn-default mx-4  " type="button" (click)="buyProduct()"> Buy <i class="bi bi-bag-dash-fill"></i></button>
 						</div>
 						<div class="action">
 						 
@@ -60,4 +60,19 @@
 		</div>
 	</div>
 
- 
+ <!-- this is login popup toggle -->
+<div *ngIf="loginToggle" class="popup">
+    <div class="modal-action__container modal-action--delete">  
+        <div class="modal-action__content">
+          <div class="modal-action__body">
+            Please Login Your Account  
+
+          </div>
+          <div class="modal-action__footer">
+            <button (click)="cancleButton()" type="button"class="btn btn-cancel button" ng-click="deletePanelCancelled()"> Cancel</button>
+            <button (click)="loginButton()" type="button"class="btn btn-delete button" ng-click="deletePanelConfirmed()"> Login
+            </button>
+          </div>
+        <div>
+      </div>
+</div>
