ngOnDestory apply , login path set and product detils send to local storage

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -57,7 +57,7 @@
               <ul class="dropdown-menu  dropdown-menu-dark ">
                 <li ><a class="dropdown-item"  > <i class="bi bi-person-fill-gear"></i>&nbsp;Account</a></li>
                 <li><a class="dropdown-item"  > <i class="bi bi-cart4"></i>&nbsp;Orders</a></li>
-                <li   *ngIf="loginToggleButton"><a routerLink="/login"    class="dropdown-item" > <i class="bi bi-box-arrow-left"></i>&nbsp;Login</a></li>
+                <li   *ngIf="loginToggleButton"><a routerLink="/login"  (click)="login('shopping')"   class="dropdown-item" > <i class="bi bi-box-arrow-left"></i>&nbsp;Login</a></li>
                 <li *ngIf="logoutToggleButton"><a class="dropdown-item"  (click)="logout()"> <i class="bi bi-box-arrow-right"></i>&nbsp;Log Out</a></li>
                 
           
