--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -70,7 +70,7 @@
           </div>
           <div class="modal-action__footer">
             <button (click)="cancleButton()" type="button"class="btn btn-cancel button" ng-click="deletePanelCancelled()"> Cancel</button>
-            <button (click)="loginButton()" type="button"class="btn btn-delete button" ng-click="deletePanelConfirmed()"> Login
+            <button (click)="loginButton('product-detail')" type="button"class="btn btn-delete button" ng-click="deletePanelConfirmed()"> Login
             </button>
           </div>
         <div>
