--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-5">
                   <div class="me-lg-5">
                     <div class="d-flex">
-                      <img src="{{cartData.productImage.img1}}" class="border rounded me-3" style="width: 96px; height: 96px;" />
+                      <img (click)="producDetails(cartData)" src="{{cartData.productImage.img1}}" class="border rounded me-3" style="width: 96px; height: 96px;" />
                       <div class="">
                         <a   class="nav-link">{{cartData.productName}}</a>
                         <p class="text-muted">{{cartData.productFlavour}}</p>
