--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -37,12 +37,15 @@
 							<span class="review-no">41 reviews</span>
 						</div>
 						<!-- <p class="product-description">Suspendisse quos? Tempus cras iure temporibus? Eu laudantium cubilia sem sem! Repudiandae et! Massa senectus enim minim sociosqu delectus posuere.</p> -->
-						<h4 class="price">current price: <span>{{ productPrize|currency:'INR'}}</span></h4>
+						<!-- <h4 class="price">current price: <span>{{ discountProductPrize|currency:'INR'}}</span></h4> -->
+						<span style="color: green; font-weight: 600;">Special price</span>
+                       <h2 class="price"><span >{{discountProductPrize| currency:'INR'}}</span>&nbsp; <span><del style="color: gray; font-size: 15px;">{{orignalPrice|currency:'INR'}}</del></span>&nbsp; <span style="color: green; font-size: 20px;">{{product.discount}}% Off</span></h2> 
+						
 						<p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
 						<h5 class="sizes">Weight:
-							<button aria-selected="true" (click)="selectWeight(product.productCost,1)"  class="size" data-toggle="tooltip" title="small">{{product.productWeight.first}}</button>
-							<button aria-selected="false" (click)="selectWeight(product.productCost,2)" class="size" data-toggle="tooltip" title="small">{{product.productWeight.second}}</button>
-							<button aria-selected="false" (click)="selectWeight(product.productCost,4)" class="size" data-toggle="tooltip" title="small">{{product.productWeight.third}}</button>
+							<button aria-selected="true" (click)="selectWeight(product.productCost, product.productCost-(( product.productCost*product.discount)/100),1)"  class="size" data-toggle="tooltip" title="small">{{product.productWeight.first}}</button>
+							<button aria-selected="false" (click)="selectWeight(product.productCost,product.productCost-((product.productCost*product.discount)/100),2)" class="size" data-toggle="tooltip" title="small">{{product.productWeight.second}}</button>
+							<button aria-selected="false" (click)="selectWeight(product.productCost,product.productCost-((product.productCost*product.discount)/100),4)" class="size" data-toggle="tooltip" title="small">{{product.productWeight.third}}</button>
  
 						</h5>
 					 
