--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -28,7 +28,9 @@
           </select>
         </div>
       </section>
-
+  
+      <div class="main-row">
+        
       
     <div class="row" >
         <div  class="col-4" *ngFor="let products of latestProduct |search:searchData">
@@ -58,236 +60,8 @@
 
  
     </div>
-        <h2 class="title">New product</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="./images/product-5.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$40.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-6.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$50.00</p>
-            </div>
-    
-            <div class="col-4">
-                <img src="./images/product-7.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$55.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-8.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-            <img src="./images/product-1.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$40.00</p>
-        </div>
-
-
-        <div class="col-4">
-            <img src="./images/product-2.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$50.00</p>
-        </div>
-
-        <div class="col-4">
-            <img src="./images/product-3.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$55.00</p>
-        </div>
-
-
-        <div class="col-4">
-            <img src="./images/product-4.jpg" alt="">
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-o" ></i>
-
-            </div>
-            <h4>Red Printed T-shirt</h4>
-            <p>$60.00</p>
-        </div>
-    </div>
-        <h2 class="title">Feature product</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="./images/product-5.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$40.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-6.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$50.00</p>
-            </div>
-    
-            <div class="col-4">
-                <img src="./images/product-7.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-half-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$55.00</p>
-            </div>
-    
-    
-            <div class="col-4">
-                <img src="./images/product-8.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-9.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-10.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-11.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-            <div class="col-4">
-                <img src="./images/product-12.jpg" alt="">
-                <div class="rating">
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star" ></i>
-                    <i class="fa fa-star-o" ></i>
-    
-                </div>
-                <h4>Red Printed T-shirt</h4>
-                <p>$60.00</p>
-            </div>
-         </div>
-    </div>
+      </div>
+   </div>
  
 <!----------Offer--------->
 <div class="offer">
