--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-lg col-sm-6 d-flex justify-content-sm-center justify-content-md-start justify-content-lg-center justify-content-xl-end mb-2">
                   <div class="float-md-end">
-                    <a  class="btn btn-light border px-2 icon-hover-primary"><i class="fas fa-heart fa-lg px-1 text-secondary"></i></a>
+                    <a  class="btn btn-light border px-2 icon-hover-primary"><i class="bi bi-suit-heart-fill fa-lg px-1 text-secondary"></i></a>
                     <a   class="btn btn-light border text-danger icon-hover-danger" (click)="removeCartItem(cartData.id)"> Remove</a>
                   </div>
                 </div>
