--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,7 +39,7 @@
               <li class="btn-group">
                 <a type="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
                 <ul class="dropdown-menu  dropdown-menu-dark ">
-                  <li><a class="dropdown-item" > linkedin</a></li>
+                  <li><a class="dropdown-item" > oils</a></li>
                   <li><a class="dropdown-item"  >dribbble</a></li>
                   <li><a class="dropdown-item"  >dribbble</a></li>
                   <li><a></a></li>  
