--- a/src/app/buy-page/buy-page.component.scss
+++ b/src/app/buy-page/buy-page.component.scss
@@ -230,3 +230,71 @@ body{margin-top:20px;
         font-size: 13px;
         font-weight: 500
     }
+    
+
+// order place toggle image set
+
+    .popup{
+        margin: 0;
+        font-family: 'Montserrat', sans-serif;
+        background: url('http://lorempizza.com/1500/1000/') no-repeat center center fixed;
+        width: 100%;
+        height: auto;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+      /* -------------------------------- */
+      
+      
+      
+      
+      // Delete confirmation panel - Dashboard
+      .modal-action {
+        &__container {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          z-index: 10000;
+          background: rgba(0,0,0,0.8);
+        }
+      
+        &__content {
+          width: 300px;
+          margin: 0 auto;
+          position: relative;
+          overflow: hidden;
+          top: 50%;
+          transform: translateY(-50%);
+          background: #fff;
+          border-radius: 4px;
+          font-size: 16px;
+          color: rgba(0,0,0,0.8);
+        }
+      
+        &__body {
+          position: relative;
+          text-align: center;
+          line-height: 1.5;
+          padding: 28px 40px;
+        }
+      
+        &__footer {
+          width: 100%;
+          margin-top: 0;
+          padding: 0;
+          text-align: center;
+          border-top: none;
+      
+           
+            
+            
+           
+          
+        }
+      
+      }
+      
+      
