--- a/src/app/product-display/product-display.component.html
+++ b/src/app/product-display/product-display.component.html
@@ -1,40 +1,38 @@
  
+ 
   <!-- cart + summary -->
   <section>
     <div class="container my-5">
       <header class="mb-4">
         <h3>Recommended items</h3>
       </header>
-  
       <div class="row">
-        <div *ngFor="let products of latestProduct" class="col-lg-3 col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="card px-4 border shadow-0 mb-4 mb-lg-0">
             <div class="mask px-2" style="height: 50px;">
               <div class="d-flex justify-content-between">
-                <h6><span style=" border-radius: 50%;" class="badge bg-danger pt-1 mt-3 ms-2">{{products.discount}}% discount</span></h6>
-                <a  ><i class="fas fa-heart text-primary fa-lg float-end pt-3 m-2"></i></a>
+                <h6><span class="badge bg-danger pt-1 mt-3 ms-2">New</span></h6>
+                <a href="#"><i class="fas fa-heart text-primary fa-lg float-end pt-3 m-2"></i></a>
               </div>
             </div>
-            <a style="height:200px;"  class="">
-              <img (click)="producDetailsShow(products)" src="{{products.productImage.img1}}" class="card-img-top rounded-2"  />
+            <a href="#" class="">
+              <img src="https://mdbootstrap.com/img/bootstrap-ecommerce/items/7.webp" class="card-img-top rounded-2" />
             </a>
             <div class="card-body d-flex flex-column pt-3 border-top">
-              <a   class="nav-link">{{products.productName}}</a>
+              <a href="#" class="nav-link">Gaming Headset with Mic</a>
               <div class="price-wrap mb-2">
-                <strong class="">{{products.productCost-((products.productCost*products.discount)/100) | currency:'INR'}}</strong><span>/500gm</span>
-                <p> <del class="">{{products.productCost|currency:'INR'}}</del></p>
-               
+                <strong class="">$18.95</strong>
+                <del class="">$24.99</del>
               </div>
               <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto">
-                <a   class="btn btn-outline-primary w-100">Add to cart</a>
+                <a href="#" class="btn btn-outline-primary w-100">Add to cart</a>
               </div>
             </div>
           </div>
         </div>
+        
+      
       </div>
     </div>
   </section>
-  <!-- Recommended -->
-  
-
-  <app-footer></app-footer>
+   
