--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -15,7 +15,7 @@
 
 
 <div class="samall-container">
-    <h2 class="title">Latest product </h2>
+    <h2 class="title">Latest Product </h2>
     <section class="cont">
        
         <div class="dropdown dropdown-dark">
@@ -28,41 +28,54 @@
           </select>
         </div>
       </section>
-  
-      <div class="main-row">
-        
-      
-    <div class="row" >
-        <div  class="col-4" *ngFor="let products of latestProduct |search:searchData">
-            <img (click)="producDetails(products)"  src={{products.productImage.img1}} alt="">
-            <h4>{{products.productName}}</h4>
-            <div class="rating">
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star" ></i>
-                <i class="fa fa-star-half-o" ></i>
-                
-            </div>
-            <p><b>{{products.productCost|currency:'INR'}} </b>/ {{products.productWeight.first}}</p>
-            <p>{{products.productFlavour}}</p>
-           
-                <div class="cart-container">
-                    <button class="cart-button" (click)="addCart(button,products)" #button>
-                      <i class="fa fa-shopping-cart"></i>
-                      <i class="fa fa-box"></i>
-                      <span class="add-to-cart">Add to Cart</span>
-                      <span class="added">Added</span>
-                    </button>
+ 
+      <section>
+        <div class="container my-5">
+ 
+          <div class="row mb-2">
+            <div class="col-4" *ngFor="let products of latestProduct |search:searchData" >
+              <div class="card px-4 border shadow-0 mb-4 mb-lg-0">
+                <div class="mask px-2" style="height: 50px;">
+                  <div class="d-flex justify-content-between">
+                    <h6><span class=" new badge bg-danger pt-1 mt-3 ms-2">{{products.discount}}% off</span></h6>
+                    <a><i class="fas fa-heart text-primary fa-lg float-end pt-3 m-2"></i></a>
                   </div>
+                </div>
+                <a   class="">
+                  <img  (click)="producDetails(products)"  src={{products.productImage.img1}} alt="" class="card-img-top rounded-2" />
+                </a>
+                <div class="card-body d-flex flex-column pt-3 border-top">
+                    <h6>{{products.productName}}</h6>
+                    <div class="rating">
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star-half-o" ></i>
+                        
+                    </div>
+                    <p><b>{{products.productCost|currency:'INR'}} </b>/ {{products.productWeight.first}}</p>
+            <p>{{products.productFlavour}}</p>
+                  <div >
+                    <div class="cart-container pb-2">
+                        <button class="cart-button" (click)="addCart(button,products)" #button>
+                          <i class="fa fa-shopping-cart"></i>
+                          <i class="fa fa-box"></i>
+                          <span class="add-to-cart">Add to Cart</span>
+                          <span class="added">Added</span>
+                        </button>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             
+          
+          </div>
         </div>
-
- 
-    </div>
-      </div>
+      </section>
+        
    </div>
- 
 <!----------Offer--------->
 <div class="offer">
     <div class="samall-container">
@@ -141,7 +154,7 @@
 </div>
 
 <!---------barands--------->
-<div class="barands">
+<!-- <div class="barands">
     <div class="samall-container">
         <div class="row">
             <div class="col-5">
@@ -161,7 +174,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <app-footer></app-footer>
  
