--- a/src/app/shopping/shopping.component.scss
+++ b/src/app/shopping/shopping.component.scss
@@ -10,30 +10,9 @@ body{
 
 
 // main container 
-.container{
-    max-width: 1300px;
-    margin: auto;
-    padding: 0px 25px;
  
-}
  
-nav{
-    flex: 1;
-    text-align: right;
-}
-nav ul{
-    display: inline-block;
-    list-style-type: none;
-   
-}
-nav ul li{
-    display: inline-block;
-    margin-right: 20px;
-}
- a{
-    text-decoration: none;
-    color: #555;
-}
+ 
 p{
     color: #555;
 }
@@ -70,19 +49,10 @@ p{
 .btn:hover{
     background:#563434 ;
 }
-.header{
-    background: radial-gradient(#fff,#ffd6d6);
-    // margin-top: -70px;
-}
-.header .row{
-margin-top: 70p;
-}
+ 
 
 /* categories style */
-.categories{
-    margin: 70px ;
-
-}
+ 
 .col-3{
     flex-basis: 30%;
     min-width: 250px;
@@ -185,58 +155,25 @@ small{
     font-size: 16px;
 }
 /*-------barands--------------*/
-.barands{
-    margin: 100px auto;
-}
-.col-5 {
-    width: 160px;
-}
-.col-5 img{
-    width: 100%;
-    cursor: pointer;
-    filter: grayscale(100%);
-    transition: .5s;
-}
-.col-5 img:hover{
-    filter: grayscale(0%);
-}
+// .barands{
+//     margin: 100px auto;
+// }
+// .col-5 {
+//     width: 160px;
+// }
+// .col-5 img{
+//     width: 100%;
+//     cursor: pointer;
+//     filter: grayscale(100%);
+//     transition: .5s;
+// }
+// .col-5 img:hover{
+//     filter: grayscale(0%);
+// }
  
-/*----------menu-icon------*/
-.menu-icon{
-    width: 28px ;
-    margin-left: 20px;
-    display: none;
-}
+ 
 /*-------media query for menu--------*/
-@media only screen and (max-width:800px){
-    nav ul{
-        position: absolute;
-        top: 70px;
-        left: 0px;
-        background: #333;
-        width: 100%;
-         /*over flow nav toogle takhon add style-*/
-    overflow: hidden;
-    transition: max-height 0.9s;
 
-    }
-    nav ul li{
-        display: block;
-         text-align: center;
-        margin-top: 10px;
-        margin-bottom: 10px;
-
-    }
-    nav ul li a{
-        color: #fff;
-        font-weight: bold;
-       
-    }
-    .menu-icon{
-        display: block;
-        cursor: pointer;
-    }
-}
 /*----------media query for less then 600 screen size--------*/
 @media only screen and (max-width:600px){
     .row{
@@ -249,7 +186,10 @@ small{
 
 
 
- 
+ .new{
+   border-radius:50%;
+   padding: 5px;
+ }
  
 .cart-container {
     display: flex;
